add some component

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header>
+    <nav>
+      <a>Home</a>
+      <a>Favorites</a>
+    </nav>
+  </header>
   <app-root></app-root>
 </body>
 </html>
